syntax = "proto3";

package thrylos;

option go_package = "github.com/thrylos-labs/thrylos";

message Transaction {
  string id = 1;
  int64 timestamp = 2;
  repeated UTXO inputs = 3;
  repeated UTXO outputs = 4;
  string signature = 5;
  string dilithium_signature = 6;
  repeated string previous_tx_ids = 7; // Adjusted to snake_case
}

message UTXO {
  string transaction_id = 1;
  int32 index = 2;
  string owner_address = 3;
  int64 amount = 4;
}
